Updated the logic of handling the threads